# marketstore

./: .gitignore  MarketStore_Backfill功能分析.md  MarketStore_Rust客户端TDD开发计划.md  MarketStore_Rust客户端调研报告.md  MarketStore_Rust客户端项目总结.md  MarketStore外部写入币安对接方案.md  MarketStore客户端查询Symbol列表指南.md  MarketStore币安插件API实现分析.md  README_zh.md  bianance_build.sh  test_config.yaml  币安API数据类型详解.md  币安插件与官方API对比分析.md  插件系统详细说明.md
contrib/binancefeeder_v2/: Makefile  README.md  binancefeeder_v2.go  mkts.example.yml  run_config.yml  币安插件V2开发总结.md
contrib/binancefeeder_v2/api/: client.go
contrib/binancefeeder_v2/configs/: config.go
contrib/binancefeeder_v2/feed/: backfill.go  realtime.go
contrib/binancefeeder_v2/symbols/: manager.go
contrib/binancefeeder_v2/writer/: writer.go
frontend/stream/: stream.go
marketstore-rust-client/: Cargo.toml  README.md  USAGE.md  build.rs
marketstore-rust-client/examples/: basic_usage.rs
marketstore-rust-client/scripts/: test_all.sh
marketstore-rust-client/src/: lib.rs  main.rs
marketstore-rust-client/src/client/: grpc_client.rs  hybrid_client.rs  mod.rs  websocket_client.rs
marketstore-rust-client/src/error/: error.rs
marketstore-rust-client/src/models/: data_types.rs  mod.rs  requests.rs
marketstore-rust-client/src/utils/: conversion.rs  mod.rs
marketstore-rust-client/tests/integration/: hybrid_tests.rs
marketstore-rust-client/tests/unit/: error_tests.rs  grpc_client_tests.rs  models_tests.rs  websocket_client_tests.rs
plugins/: README_zh.md
